// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React-Query fetcher: custom-mapper Should generate mutation correctly with lazy variables 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      useCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument).bind(null, variables),
      options
    );
export const useInfiniteTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      pageParamKey: keyof TTestQueryVariables,
      variables?: TTestQueryVariables,
      options?: UseInfiniteQueryOptions<TTestQuery, TError, TData>
    ) =>{
    const query = useCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument)
    return useInfiniteQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      (metaData) => query({...variables, [pageParamKey]: metaData.pageParam }),
      options
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      useCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument),
      options
    );"
`;

exports[`React-Query fetcher: custom-mapper Should generate query correctly with external mapper 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const useInfiniteTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      pageParamKey: keyof TTestQueryVariables,
      variables?: TTestQueryVariables,
      options?: UseInfiniteQueryOptions<TTestQuery, TError, TData>
    ) =>{
    
    return useInfiniteQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      (metaData) => myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, {...variables, [pageParamKey]: metaData.pageParam })(),
      options
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => myCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: custom-mapper Should generate query correctly with internal mapper 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => myCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: fetch Should generate query and mutation correctly 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>
    ) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: graphql-request Should generate query correctly with client 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      client: GraphQLClient,
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>,
      headers?: RequestInit['headers']
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(client, TestDocument, variables, headers),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      client: GraphQLClient,
      options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>,
      headers?: RequestInit['headers']
    ) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(client, TestDocument, variables, headers)(),
      options
    );"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config 2`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config and fetchParams object 2`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from env var 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;

exports[`React-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from just identifier 1`] = `
"
export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;
export const useTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: UseQueryOptions<TTestQuery, TError, TData>
    ) =>
    useQuery<TTestQuery, TError, TData>(
      variables === undefined ? ['test'] : ['test', variables],
      fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
      options
    );
export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;
export const useTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: UseMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) =>
    useMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      ['test'],
      (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
      options
    );"
`;
